# Kronos

./: .env  .gitignore  Cargo.toml  README.md  cobertura.xml  codecov.yml  test.txt  user_settings.json
.github/workflows/: rust.yaml
docs/: SetupGuide.md
migrations/2024-10-16-222233_create_table_tasks/: down.sql  up.sql
migrations/2024-10-16-223041_create_table_tasks_performed/: down.sql  up.sql
src/: kronos_manager.rs  lib.rs  main.rs  model.rs  schema.rs  settings.rs  sync_manager.rs  task_list.rs  task_prompt.rs  task_prompt_manager.rs  widget.rs
src/model/: latest_task.rs  task.rs  task_performed.rs
src/ui/: task_prompt_widget.rs
src/utils/: app_settings.rs  default_settings.json
src/widget/: task_list_widget.rs  task_prompt_widget.rs  task_select_widget.rs
tests/res/: test_read_settings.json
