[package]
name = "kronos"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.43.0", features = ["full"] }
diesel = { version = "2.2.7", features = ["sqlite", "returning_clauses_for_sqlite_3_35"] }
diesel_migrations = "2.2.0"
libsqlite3-sys = { version = "0.31.0", features = ["bundled"] }
dotenvy = "0.15.7"
chrono = { version = "0.4.39", features = ["serde"]}
regex = "1.11.1"
egui = "0.31.0"
eframe = "0.31.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.9.0"
tokio-macros = "2.5.0"
env_logger = "0.11.6"
log = "0.4.26"
dirs = "6.0.0"
once_cell = "1.20.3"

[dev-dependencies]
rstest = "0.24.0"
serial_test = "3.2.0"
# mock = "0.11.0"
tempfile = "3.17.1"
