[package]
name = "kronos"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.48.0", features = ["full"] }
diesel = { version = "2.3.2", features = [
    "sqlite",
    "returning_clauses_for_sqlite_3_35",
] }
diesel_migrations = "2.3.0"
libsqlite3-sys = { version = "0.35.0", features = ["bundled"] }
dotenvy = "0.15.7"
chrono = { version = "0.4.42", features = ["serde"] }
regex = "1.12.2"
egui = "0.33.0"
eframe = "0.33.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.145"
rand = "0.9.2"
tokio-macros = "2.6.0"
env_logger = "0.11.8"
log = "0.4.28"
dirs = "6.0.0"
once_cell = "1.21.3"
reqwest = { version = "0.12.24", features = ["blocking"] }
url = { version = "2.5.7", features = ["serde"] }

[dev-dependencies]
rstest = "0.26.1"
serial_test = "3.2.0"
# mock = "0.11.0"
tempfile = "3.23.0"
httpmock = "0.8.1"
