[package]
name = "kronos"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.52.3", features = ["full"] }
diesel = { version = "2.3.10", features = [
    "sqlite",
    "returning_clauses_for_sqlite_3_35",
] }
diesel_migrations = "2.3.2"
libsqlite3-sys = { version = "0.37.0", features = ["bundled"] }
dotenvy = "0.15.7"
chrono = { version = "0.4.45", features = ["serde"] }
regex = "1.12.4"
egui = "0.33.0"
eframe = "0.33.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.150"
rand = "0.10.1"
tokio-macros = "2.7.0"
env_logger = "0.11.11"
log = "0.4.33"
dirs = "6.0.0"
once_cell = "1.21.3"
reqwest = { version = "0.13.4", features = ["blocking"] }
url = { version = "2.5.8", features = ["serde"] }

[dev-dependencies]
rstest = "0.26.1"
serial_test = "3.5.0"
# mock = "0.11.0"
tempfile = "3.27.0"
httpmock = "0.8.3"
